[package]
name = "overlaylib-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
glutin = "*"
glutin-winit = "0.4.2"
overlaylib = {"path" = "../overlaylib"}
winit = { version = "0.29", features = ["x11", "rwh_05"] }
raw-window-handle = "0.5"
image = "0.25.0"
